Changelog
=========

1.0a3 - Unreleased
------------------

- Sunburst has it's own table-less prefs_main_template.pt to 
  keep validation of control panels for both sunburst and 
  plonetheme.classic
  [spliter]

- removed negative margin from #contentActionMenus - it broke 
  the rounded corner of #edit-bar
  [spliter]

- moved "Manage portlets" fallback link out of main_template to 
  plone.manage_portlets_fallback viewlet
  http://dev.plone.org/plone/ticket/9808
  [spliter]

- Update styles to reflect the move to @@register and @@new-user
  [esteele]

1.0a2 - 2009-11-18
------------------

- Remove non-ascii character in README that prevented distribution.
  [esteele]


1.0a1 - 2009-11-18
------------------

- Initial release
