@@ -1268,7 +1268,7 @@ tr.selected {
 
 /* @group Login form */
 
-#login-form input {
+#fieldset-openid-login input, #login-form input {
     font-size: 150%;
     width: inherit;
 }
@@ -1279,16 +1279,16 @@ body.template-new-user #content input {
     width: inherit;
 }
 
-#login-form label {
+#fieldset-openid-login label, #login-form label {
 	float:left;
-    width:25%;
+    width:15%;
     margin-right:0.5em;
     padding-top:0.2em;
     text-align:right;    
 }
 
-#login-form .formControls {
-    padding-left: 25%;
+#fieldset-openid-login .formControls, #login-form .formControls {
+    padding-left: 15%;
     margin-left: 0.5em;
 }
 
