@@ -4,6 +4,9 @@ Changelog
 1.0a3 - Unreleased
 ------------------
 
+- Add selectors for openid login form section to login styles.
+  [smcmahon]
+
 - Sunburst has it's own table-less prefs_main_template.pt to 
   keep validation of control panels for both sunburst and 
   plonetheme.classic
